<resources>
    <string name="app_name">Weather Wise</string>
    <string name="menu_home">Home</string>
    <string name="menu_fav">Favorites</string>
    <string name="menu_alert">Alert</string>
    <string name="menu_setting">Setting</string>
    <string name="add_location">Location</string>
    <string name="click_on_the_image_to_set_your_location">Click on the image to set your location</string>
    <string name="try_again">Please try again</string>
    <string name="premission_dined">Permission Denied</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="city_name">Dallas</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="feels_like">Feels Like</string>
    <string name="today">Today</string>
    <string name="full_report">Full Report</string>
    <string name="degree_symble">°</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next_48_hours">Next 48 hours</string>
    <string name="this_week">This Week</string>
    <string name="add_your_favorite_location">add your favorite location</string>
    <string name="temperature">Temperature</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="meter_second">Meter/Second</string>
    <string name="mile_hour">Mile/Hour</string>
    <string name="location">Location</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="delete">Delete</string>
    <string name="create_an_alert">create an alert</string>
    <string name="time">Time</string>
    <string name="start_date">Start Date</string>
    <string name="add_start_date">Add start date</string>
    <string name="end_date">End Date</string>
    <string name="add_end_date">Add end date</string>
    <string name="cancel">Cancel</string>
    <string name="air_quality">Air Quality</string>
    <string name="save_location">Save Location</string>
</resources>