<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.myprojects.ui.setting.SettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pink"
        android:orientation="horizontal"
        android:padding="20dp"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@{@drawable/gradient_bg}"
                app:cardCornerRadius="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature"
                    android:textColor="@color/darkBlue"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:textSize="18sp">

                </TextView>

            </androidx.cardview.widget.CardView>

            <RadioGroup
                android:id="@+id/radioTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_gravity="center">

                <RadioButton
                    android:id="@+id/tempKelvin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/darkBlue"
                    android:checked="true"
                    android:text="@string/kelvin"
                    android:textColor="@color/darkBlue" />

                <RadioButton
                    android:id="@+id/tempFahrenheit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/darkBlue"
                    android:text="@string/fahrenheit"
                    android:textColor="@color/darkBlue" />

                <RadioButton
                    android:id="@+id/tempCelsius"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/darkBlue"
                    android:text="@string/celsius"
                    android:textColor="@color/darkBlue" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@{@drawable/gradient_bg}"
                app:cardCornerRadius="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind_speed"
                    android:textSize="18sp"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:textColor="@color/darkBlue">

                </TextView>

            </androidx.cardview.widget.CardView>

            <RadioGroup
                android:id="@+id/radioWind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/mByS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/darkBlue"
                    android:checked="true"
                    android:text="@string/meter_second"
                    android:textColor="@color/darkBlue" />

                <RadioButton
                    android:id="@+id/mByH"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/darkBlue"
                    android:text="@string/mile_hour"
                    android:textColor="@color/darkBlue" />

            </RadioGroup>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@{@drawable/gradient_bg}"
                app:cardCornerRadius="10dp"
                android:layout_marginTop="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/darkBlue"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:text="@string/location">

                </TextView>

            </androidx.cardview.widget.CardView>

            <RadioGroup
                android:id="@+id/radioNotification"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/enabled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/darkBlue"
                    android:checked="true"
                    android:text="@string/enabled"
                    android:textColor="@color/darkBlue" />

                <RadioButton
                    android:id="@+id/disabled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/darkBlue"
                    android:text="@string/disabled"
                    android:textColor="@color/darkBlue" />

            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

</layout>